2004-10-13  Jeremy Handcock  <handcock@redhat.com>

	* maps/oprofile.map: Remove training '/' from cvsroot.

2004-10-13  Jeremy Handcock  <handcock@redhat.com>

	* maps/oprofile.map: Fix typo.

2004-07-23  Jeremy Handcock  <handcock@redhat.com>

	* customTargets.xml: Add ppc assembly target.

2004-07-18  Keith Seitz  <keiths@redhat.com>

	* customTargets.xml: Add more arch-specific assemble targets.
	* build.properies: Add note explaining "configs" and RPM building.

2004-07-15  Keith Seitz  <keihts@redhat.com>

	* customTargets.xml: Remove a bunch of unused stuff.
	* build.xml: Ditto.

2004-07-14  Keith Seitz  <keiths@redhat.com>

	* customTargets.xml: Separate AllElements target so that we can skip
	fetching elements if they've already been fetched (via a hacky property
	definition that can be passed on the command line). Useful for SRPM
	building.

2004-07-14  Keith Seitz  <keiths@redhat.com>

	* build.xml: New file.
	* build.properties: New file.
	* customTargets.xml: New file.
	* maps/oprofile.map: New file.