@@ -49,7 +49,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -60,7 +60,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -71,7 +71,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -82,7 +82,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -93,7 +93,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -104,7 +104,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
@@ -115,7 +115,7 @@
 	<antcall target="build.native"/>
 
 	<!-- Do the actual assembly -->
-	<property name="archiveName" value="eclipse-oprofile.zip" />
+	<property name="archiveName" value="eclipse-oprofile.tar.gz" />
 	<ant antfile="${assembleScriptName}"/>
 </target>
 
